--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-stars": "^1.2.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "yarn": "^1.22.19",
