--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
+    "react-native-calendars": "^1.1301.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
